--- a/dessert.html
+++ b/dessert.html
@@ -1,70 +1,8 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Chef's Secret</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  <body>
-    <header id="top-banner" class="header-section">
-    <div class="logo-container">
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
-    </div>
-    <h1>Chef's Secret</h1>
-    <nav class="navbar">
-      <ul class="navbar-nav">
-        <li><a class="nav-link" href="index.html">Home</a></li>
-        <li><a class="nav-link" href="contact.html">Contact</a></li>
-        <li><a class="nav-link" href="about.html">About Us</a></li>
-      </ul>
-    </nav>
-  </header>
-
-<main>
-  <section class="highlighted-text">
-      <h2>Sweeten life one bite at a time</h2>
-      <div class="recipe-list">
-        <div class="recipe-card">
-          <img src="images/chocolatecake.jpg" alt="chocolate cake">
-          <div class="recipe-info">
-            <h3>Chocolate Lava Cake</h3>
-            <p>A warm chocolate cake with a rich molten center.</p>
-            <div class="center-link">
-              <p><a href="recipes/chocolateCakeRecipe.html">View Recipe</a></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/cherrytart.jpg" alt="cherry tart">
-          <div class="recipe-info">
-            <h3>Cherry Tart</h3>
-            <p>A crisp pastry shell filled with custard and topped with fresh cherries.</p>
-            <p><a href="recipes/cherrytartrecipe.html">View Recipe</a></p>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/Tiramisu.jpg" alt="Tiramisu">
-          <div class="recipe-info">
-            <h3>Tiramisu</h3>
-            <p>Classic Italian dessert layered with espresso-soaked ladyfingers and mascarpone cream.</p>
-            <p><a href="recipes/tiramisuRecipe.html">View Recipe</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-  <footer id="bottom-footer" class="footer-section">
-    <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
-  </footer>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef's Secret</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -132,5 +70,4 @@
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
 </body>
->>>>>>> 9f7a7aef4c1ca15940bf45bb070972d25f72711e
 </html>
