--- a/drinks.html
+++ b/drinks.html
@@ -1,71 +1,8 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Chef's Secret</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-  
-  <body>
-    <header id="top-banner" class="header-section">
-      <div class="logo-container">
-        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
-      </div>
-      <h1>Chef's Secret</h1>
-      <nav class="navbar">
-        <ul class="navbar-nav">
-          <li><a class="nav-link" href="index.html">Home</a></li>
-          <li><a class="nav-link" href="contact.html">Contact</a></li>
-          <li><a class="nav-link" href="about.html">About Us</a></li>
-        </ul>
-      </nav>
-    </header>
-
-<main>
-  <section class="highlighted-text">
-      <h2>Refresh your day with every sip</h2>
-      <div class="recipe-list">
-        <div class="recipe-card">
-          <img src="images/latte.jpg" alt="latte">
-          <div class="recipe-info">
-            <h3>Coffee Latte</h3>
-            <p>Learn how to make a cafe latte with this easy recipe that will please all fellow coffee drinkers. I love cafe lattes but buying them can be pricey.</p>
-            <div class="center-link">
-              <p><a href="recipes/latteRecipe.html">View Recipe</a></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/appleslush.jpg" alt="apple slush">
-          <div class="recipe-info">
-            <h3>Apple slush</h3>
-            <p>Enjoy the fair at home with this apple-flavor slushy.</p>
-            <p><a href="recipes/appleslushRecipe.html">View Recipe</a></p>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/martini.jpg" alt="Dirty Martini">
-          <div class="recipe-info">
-            <h3>Dirty Martini</h3>
-            <p>A dirty martini is the perfect cocktail for olive lovers. It can be made with vodka or gin and served on the rocks or chilled.</p>
-            <p><a href="recipes/martiniRecipe.html">View Recipe</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-  <footer id="bottom-footer" class="footer-section">
-    <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
-  </footer>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef's Secret</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -134,5 +71,4 @@
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
 </body>
->>>>>>> 9f7a7aef4c1ca15940bf45bb070972d25f72711e
 </html>
