--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Chef's Secret</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -14,95 +15,9 @@
       <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
     </div>
     <h1>Chef's Secret</h1>
-    <nav class="navbar">
-      <ul class="navbar-nav">
-        <li><a class="nav-link" href="index.html">Home</a></li>
-        <li><a class="nav-link" href="contact.html">Contact</a></li>
-        <li><a class="nav-link" href="about.html">About Us</a></li>
-      </ul>
-    </nav>
-  </header>
-  <main>
-    <section class="highlighted-text">
-      <h2>Delicious recipes for every day</h2>
-      <p>Discover the secrets of easy and fast cooking with us!</p>
-    </section>
-
-    <section class="highlighted-text">
-      <h2>Catalog</h2>
-      <div class="recipe-list">
-        <div class="recipe-card">
-          <img src="images/breakfast.jpg" alt="breakfast">
-          <div class="recipe-info">
-            <h3><a href="breakfast.html">Breakfast</a></h3>
-            <p>Start your day right! This section contains light, delicious and healthy breakfast recipes: from fluffy
-              pancakes and fragrant oatmeal to omelets and smoothies. Recharge your batteries for the whole day!</p>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/lunch.jpg" alt="lunch">
-          <div class="recipe-info">
-            <h3><a href="lunch.html">Lunch</a></h3>
-            <p>Lunch is a time to recuperate. Here you will find recipes for soups, pastas, casseroles, and meat and
-              fish dishes. Our ideas are suitable for both a quick snack and a full family meal.</p>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/drinks.jpg" alt="drinks">
-          <div class="recipe-info">
-            <h3><a href="drinks.html">Drinks</a></h3>
-            <p>From energizing smoothies to calming teas and festive cocktails, drinks bring balance to every meal and
-              occasion. Whether you’re starting your morning, cooling down in the afternoon, or winding down at night,
-              the right drink makes the moment complete.</p>
-          </div>
-        </div>
-        <div class="recipe-card">
-          <img src="images/salad.jpg" alt="salad">
-          <div class="recipe-info">
-            <h3><a href="salad.html">Salad</a></h3>
-            <p>Salads are not only a side dish, but also a complete dish. Discover fresh vegetable mixes, healthy salads
-              with quinoa or chicken, as well as original options with fruits and sauces.</p>
-          </div>
-        </div>
-        <div class="recipe-card">
-          <img src="images/dessert.jpg" alt="dessert">
-          <div class="recipe-info">
-            <h3><a href="dessert.html">Dessert</a></h3>
-            <p>Dessert is the sweet spot of any meal. Cream cheesecakes, chocolate brownies, light mousses and homemade
-              cookies are waiting for you here. Cook and delight your loved ones with sweet masterpieces!</p>
-          </div>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer id="bottom-footer" class="footer-section">
-    <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
-  </footer>
-</body>
-
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <title>Chef's Secret</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
-</head>
-
-<body>
-  <header id="top-banner" class="header-section">
-    <div class="logo-container"> 
-      <img src="images/logo.png" alt="Chef's Secret Logo" class="logo"> 
-    </div> 
-    <h1>Chef's Secret</h1>
     <nav class="navbar navbar-expand-lg p-0">
-      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse"
-        data-bs-target="#mainNav" aria-controls="mainNav" aria-expanded="false"
-        aria-label="Toggle navigation">
+      <button class="navbar-toggler ms-auto" type="button" data-bs-toggle="collapse" data-bs-target="#mainNav"
+        aria-controls="mainNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
 
@@ -169,6 +84,29 @@
         </div>
       </div>
     </section>
+    <section class="highlighted-text">
+      <h2>Featured Recipes</h2>
+      <p>Explore our top picks for quick and delicious meals!</p>
+      <div id="recipeCarousel" class="carousel slide" data-bs-ride="carousel">
+        <div class="carousel-inner">
+          <div class="carousel-item active">
+            <img src="images/pancakes.jpg" class="d-block w-100" alt="Pancakes">
+          </div>
+          <div class="carousel-item">
+            <img src="images/tiramisu.jpg" class="d-block w-100" alt="Tiramisu">
+          </div>
+          <div class="carousel-item">
+            <img src="images/chocolatecake.jpg" class="d-block w-100" alt="Chocolate Cake">
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-bs-target="#recipeCarousel" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon"></span>
+        </button>
+        <button class="carousel-control-next" type="button" data-bs-target="#recipeCarousel" data-bs-slide="next">
+          <span class="carousel-control-next-icon"></span>
+        </button>
+      </div>
+
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <footer id="bottom-footer" class="footer-section">
@@ -176,5 +114,4 @@
   </footer>
 </body>
 
->>>>>>> 9f7a7aef4c1ca15940bf45bb070972d25f72711e
 </html>
