--- a/lunch.html
+++ b/lunch.html
@@ -1,69 +1,8 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8">
-    <title>Chef's Secret</title>
-    <link rel="stylesheet" href="style.css">
-  </head>
-
-  <body>
-    <header id="top-banner" class="header-section">
-      <div class="logo-container">
-        <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
-      </div>
-      <h1>Chef's Secret</h1>
-      <nav class="nav">
-        <a href="index.html">Home</a>
-        <a href="contact.html">Contact</a>
-        <a href="about.html">About Us</a>
-      </nav>
-    </header>
-
-<main>
-  <section class="highlighted-text">
-      <h2>Fuel your afternoon with flavor</h2>
-      <div class="recipe-list">
-        <div class="recipe-card">
-          <img src="images/borscht.jpg" alt="borscht">
-          <div class="recipe-info">
-            <h3>Borscht</h3>
-            <p>Borscht is a classic beet soup that's so comforting and delicious.</p>
-            <div class="center-link">
-              <p><a href="recipes/borschtRecipe.html">View Recipe</a></p>
-            </div>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/pepperonipizza.jpg" alt="pepperoni pizza">
-          <div class="recipe-info">
-            <h3>Pepperoni pizza</h3>
-            <p>This pepperoni pizza recipe produces a quick and easy classic! Delicious homemade pizza crust and tomato sauce have never been easier.</p>
-            <p><a href="recipes/pepperonipizzaRecipe.html">View Recipe</a></p>
-          </div>
-        </div>
-
-        <div class="recipe-card">
-          <img src="images/Pestopasta.jpg" alt="Pesto pasta">
-          <div class="recipe-info">
-            <h3>Pesto pasta</h3>
-            <p>Pesto pasta is simple to make and full of flavor. This recipe is perfect for busy weeknights and comes together in just 15 minutes.</p>
-            <p><a href="recipes/pestopastaRecipe.html">View Recipe</a></p>
-          </div>
-        </div>
-      </div>
-    </section>
-
-  <footer id="bottom-footer" class="footer-section">
-    <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
-  </footer>
-</body>
-=======
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chef's Secret</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
@@ -132,5 +71,4 @@
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
 </body>
->>>>>>> 9f7a7aef4c1ca15940bf45bb070972d25f72711e
 </html>
