--- a/recipes/appleslushRecipe.html
+++ b/recipes/appleslushRecipe.html
@@ -1,91 +1,9 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Apple Slush Recipe</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-
-<body>
-    <header id="top-banner" class="header-section">
-        <div class="logo-container">
-            <img src="../images/logo.png" alt="Chef's Secret Logo" class="logo">
-        </div>
-        <h1>Chef's Secret</h1>
-        <nav class="navbar">
-            <ul class="navbar-nav">
-                <li><a class="nav-link" href="../index.html">Home</a></li>
-                <li><a class="nav-link" href="../contact.html">Contact</a></li>
-                <li><a class="nav-link" href="../about.html">About Us</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="recipe-grid">
-        <header class="recipe-header">
-            <img src="../images/appleslush.jpg" alt="appleslush">
-            <h2>Apple slush</h2>
-            <p>Enjoy the fair at home with this apple-flavor slushy. </p>
-        </header>
-
-        <aside class="recipe-sidebar">
-            <h3>Ingredients</h3>
-            <ul>
-                <li>1 (12-ounce) container frozen apple juice concentrate</li>
-                <li>3 cups ice</li>
-                <li>1 cup cold water</li>
-                <li>2 tablespoons lemon juice</li>
-                <li>1 teaspoon apple pie spice, plus more for garnish (optional)</li>
-                <li>air fried apple slices, for garnish</li>
-            </ul>
-        </aside>
-
-        <main class="recipe-main">
-            <div class="info-boxes">
-                <div class="info-box">
-                    <h3>Portions</h3>
-                    <p>4 servings</p>
-                </div>
-                <div class="info-box">
-                    <h3>Cooking Time</h3>
-                    <p>5 minutes</p>
-                </div>
-            </div>
-
-            <section class="cooking-instructions">
-                <h3>Instructions</h3>
-                <ol>
-                    <li>Combine apple juice concentrate, ice, water, lemon juice, and apple pie spice in a blender;
-                        blend until mixture reaches desired consistency.</li>
-                    <li>Garnish with air-fried apple slices and additional apple pie spice.</li>
-                    <li>Preheat air fryer to 200 degrees F (93 degrees C). </li>
-                    <li>Coat 1/8-inch-thick apple slices with cooking spray; arrange in an even layer in air fryer
-                        basket.</li>
-                    <li>Cook, turning every 5 to 10 minutes</li>
-                    <li>Transfer cooked apples to a paper towel (apples will crisp as they cool).</li>
-                </ol>
-            </section>
-        </main>
-
-        <footer class="recipe-footer">
-            <p>Chef's Secret - Online Culinary Recipes</p>
-            <p>Created by: Aidana Maxutova & Kamilla Kuchitarova</p>
-        </footer>
-    </div>
-
-    <div class="center-link">
-        <p><a href="../index.html">← Back to Recipes</a></p>
-    </div>
-</body>
-
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Apple Slush Recipe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
@@ -171,5 +89,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
->>>>>>> 9f7a7aef4c1ca15940bf45bb070972d25f72711e
 </html>
