--- a/recipes/capreseRecipe.html
+++ b/recipes/capreseRecipe.html
@@ -1,95 +1,9 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Caprese Salad Recipe</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-
-<body>
-    <header id="top-banner" class="header-section">
-        <div class="logo-container">
-            <img src="../images/logo.png" alt="Chef's Secret Logo" class="logo">
-        </div>
-        <h1>Chef's Secret</h1>
-        <nav class="navbar">
-            <ul class="navbar-nav">
-                <li><a class="nav-link" href="../index.html">Home</a></li>
-                <li><a class="nav-link" href="../contact.html">Contact</a></li>
-                <li><a class="nav-link" href="../about.html">About Us</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="recipe-grid">
-        <header class="recipe-header">
-            <img src="../images/caprese.jpg" alt="caprese">
-            <h2>Carpese Pasta</h2>
-            <p>This caprese salad with tomatoes, fresh mozzarella, and basil is drizzled with a sweet balsamic reduction
-                and olive oil.</p>
-        </header>
-
-        <aside class="recipe-sidebar">
-            <h3>Ingredients</h3>
-            <ul>
-                <li>1 cup balsamic vinegar</li>
-                <li>¼ cup honey</li>
-                <li>3 large tomatoes, cut into 1/2-inch slices</li>
-                <li>1 (16 ounce) package fresh mozzarella cheese, cut into 1/4-inch slices</li>
-                <li>¼ teaspoon salt</li>
-                <li>¼ teaspoon ground black pepper</li>
-                <li>½ cup fresh basil leaves</li>
-                <li>¼ cup extra-virgin olive oil</li>
-            </ul>
-        </aside>
-
-        <main class="recipe-main">
-            <div class="info-boxes">
-                <div class="info-box">
-                    <h3>Portions</h3>
-                    <p>4 servings</p>
-                </div>
-                <div class="info-box">
-                    <h3>Cooking Time</h3>
-                    <p>25 minutes</p>
-                </div>
-            </div>
-
-            <section class="cooking-instructions">
-                <h3>Instructions</h3>
-                <ol>
-                    <li>Preheat oven to 220°C (425°F). Grease 4 ramekins with butter and dust with cocoa powder.</li>
-                    <li>Melt butter and chocolate together in a heatproof bowl set over a pan of simmering water.</li>
-                    <li>In a separate bowl, whisk eggs, egg yolks, and sugar until light and fluffy.</li>
-                    <li>Gently fold the melted chocolate mixture into the egg mixture.</li>
-                    <li>Sift in the flour and salt, then add vanilla extract. Fold until just combined.</li>
-                    <li>Divide the batter evenly among the prepared ramekins.</li>
-                    <li>Bake for 12-14 minutes until the edges are set but the centers are still soft.</li>
-                    <li>Let cool for 1 minute, then run a knife around the edges and invert onto serving plates.</li>
-                    <li>Serve immediately with ice cream or fresh berries.</li>
-                </ol>
-            </section>
-        </main>
-
-        <footer class="recipe-footer">
-            <p>Chef's Secret - Online Culinary Recipes</p>
-            <p>Created by: Aidana Maxutova & Kamilla Kuchitarova</p>
-        </footer>
-    </div>
-
-    <div class="center-link">
-        <p><a href="../index.html">← Back to Recipes</a></p>
-    </div>
-</body>
-
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Caprese Salad Recipe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
@@ -180,5 +94,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
->>>>>>> 9f7a7aef4c1ca15940bf45bb070972d25f72711e
 </html>
