--- a/recipes/cherrytartrecipe.html
+++ b/recipes/cherrytartrecipe.html
@@ -1,98 +1,9 @@
-<<<<<<< HEAD
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <title>Cherry Tart Recipe</title>
-    <link rel="stylesheet" href="../style.css">
-</head>
-
-<body>
-    <header id="top-banner" class="header-section">
-        <div class="logo-container">
-            <img src="../images/logo.png" alt="Chef's Secret Logo" class="logo">
-        </div>
-        <h1>Chef's Secret</h1>
-        <nav class="navbar">
-            <ul class="navbar-nav">
-                <li><a class="nav-link" href="../index.html">Home</a></li>
-                <li><a class="nav-link" href="../contact.html">Contact</a></li>
-                <li><a class="nav-link" href="../about.html">About Us</a></li>
-            </ul>
-        </nav>
-    </header>
-
-    <div class="recipe-grid">
-        <header class="recipe-header">
-            <img src="../images/cherrytart.jpg" alt="cherrytart">
-            <h2>Cherry Tart</h2>
-            <p>With so many ways to enjoy fresh cherries, these cherry tarts are one of my favorites.</p>
-        </header>
-
-        <aside class="recipe-sidebar">
-            <h3>Ingredients</h3>
-            <ul>
-                <li>1 (14.1 ounce) package refrigerated pie crusts</li>
-                <li>1 pound fresh sweet cherries, pitted</li>
-                <li>2 tablespoons minute tapioca</li>
-                <li>1/3 cup sugar</li>
-                <li>1/2 teaspoon almond extract</li>
-                <li>1 pinch salt</li>
-                <li>1/2 cup whipped cream, or as needed (optional)</li>
-                <li>grated chocolate as needed for garnish (optional)</li>
-            </ul>
-        </aside>
-
-        <main class="recipe-main">
-            <div class="info-boxes">
-                <div class="info-box">
-                    <h3>Portions</h3>
-                    <p>6 servings</p>
-                </div>
-                <div class="info-box">
-                    <h3>Cooking Time</h3>
-                    <p>45 minutes</p>
-                </div>
-            </div>
-
-            <section class="cooking-instructions">
-                <h3>Instructions</h3>
-                <ol>
-                    <li>Place pie crusts on a lightly floured surface and roll out each crust with a rolling pin</li>
-                    <li>Fit each dough circle into a 4-inch removable-bottom tart pan.</li>
-                    <li>Press the dough against the sides of the pans, and prick the bottom with a fork to prevent
-                        bubbling.</li>
-                    <li>Remove any excess dough by running the rolling pin across the top of each pan.</li>
-                    <li>Refrigerate tart crusts until well chilled, about 45 minutes, keeping them refrigerated until
-                        ready to use.</li>
-                    <li>Preheat the oven to 400 degrees F (200 degrees C).</li>
-                    <li>In a large bowl, combine cherries, tapioca, sugar, almond extract, and salt.</li>
-                    <li>Remove the pans from the fridge and distribute cherry mixture evenly among the tart pans. Place
-                        the pans on a baking sheet.</li>
-                    <li>Bake in the preheated oven until cherries are soft and crust is golden brown, 25 to 30 minutes.
-                    </li>
-                </ol>
-            </section>
-        </main>
-
-        <footer class="recipe-footer">
-            <p>Chef's Secret - Online Culinary Recipes</p>
-            <p>Created by: Aidana Maxutova & Kamilla Kuchitarova</p>
-        </footer>
-    </div>
-
-    <div class="center-link">
-        <p><a href="../index.html">← Back to Recipes</a></p>
-    </div>
-</body>
-
-=======
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cherry Tart Recipe</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../style.css">
@@ -185,5 +96,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 
->>>>>>> 9f7a7aef4c1ca15940bf45bb070972d25f72711e
 </html>
