--- a/about.html
+++ b/about.html
@@ -138,6 +138,18 @@
         </div>
       </div>
     </section>
+    <section class="rating-section text-center my-5">
+      <h2>Rate our website!</h2>
+      <div class="stars">
+        <span class="star" data-value="1">★</span>
+        <span class="star" data-value="2">★</span>
+        <span class="star" data-value="3">★</span>
+        <span class="star" data-value="4">★</span>
+        <span class="star" data-value="5">★</span>
+      </div>
+      <p id="ratingMessage" class="mt-3"></p>
+    </section>
+
   </main>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <footer id="bottom-footer" class="footer-section">
