--- a/index.html
+++ b/index.html
@@ -142,6 +142,7 @@
   </footer>
   
   <script src="script.js"></script>
+  <audio id="subscribeSound" src="sounds/click.mp3" preload="auto"></audio>
 </body>
 
 </html>
