--- a/contact.html
+++ b/contact.html
@@ -11,7 +11,7 @@
 
 <body>
   <div id="time"></div>
-  
+
   <header id="top-banner" class="header-section">
     <div class="logo-container">
       <img src="images/logo.png" alt="Chef's Secret Logo" class="logo">
@@ -65,11 +65,12 @@
       <!-- Buttons -->
       <div class="d-flex justify-content-center gap-3">
         <button type="submit" class="btn btn-secondary">Send</button>
-        <button type="reset" class="btn btn-outline-secondary">Clear</button>
+        <button id="clearBtn" class="btn btn-outline-secondary">Clear</button>
       </div>
+
     </form>
   </section>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  
   <footer id="bottom-footer" class="footer-section">
     <p>© 2025 Chef's Secret | Created by Kuchitarova Kamilla and Maxutova Aidana | </p>
   </footer>
